--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,12 +1,11 @@
-
 /* src/index.css */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @font-face {
-    font-family: 'Heming';
-    src: url('./public/fonts/heming.ttf') format('woff');
-    font-weight: normal;
-    font-style: normal;
-  }
+  font-family: "Heming";
+  src: url("./public/fonts/heming.ttf") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
