--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: 'Heming';
-  src: url('/fonts/heming.ttf') format('truetype');
+  font-family: "Heming";
+  src: url("/fonts/heming.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
@@ -8,13 +8,23 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'MyCustomFont', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family:
+    "MyCustomFont",
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    "Roboto",
+    "Oxygen",
+    "Ubuntu",
+    "Cantarell",
+    "Fira Sans",
+    "Droid Sans",
+    "Helvetica Neue",
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
 }
-
 
 *,
 *:before,
